package/styles/editor.scss
/* ... */
.collaboration-cursor__caret {
  border-left: 1px solid #0d0d0d;
  border-right: 1px solid #0d0d0d;
  margin-left: -1px;
  margin-right: -1px;
  pointer-events: none;
  position: relative;
  word-break: normal;
  border-radius: 9999px;
}

/* Render the username above the caret */
.collaboration-cursor__label {
  border-radius: 9999px 9999px 9999px 0;
  color: #ffffff;
  font-size: 12px;
  font-style: normal;
  font-weight: 600;
  left: -1px;
  line-height: normal;
  padding: 4px 8px;
  position: absolute;
  top: -2em;
  user-select: none;
  white-space: nowrap;
}

/* Give a remote user a caret */
.custom-cursor__caret {
  border-color: #4a99e9;
  border-left: 1px solid #4a99e9;
  border-right: 1px solid #4a99e9;
  margin-left: -1px;
  margin-right: -1px;
  pointer-events: none;
  position: relative;
  word-break: normal;
  border-radius: 9999px;
}

/* Style for the icon */
.custom-cursor__icon {
  flex-shrink: 0;
  width: 13px;
  height: 14px;
  margin-right: 5px;
}

/* Style for the text */
.custom-cursor__text {
  white-space: nowrap;
  overflow: visible;
  flex-grow: 1;
  display: flex;
}

.custom-cursor__label-container {
  display: flex;
  align-items: center;
  position: absolute;
  top: -2em;
  left: -1px;
  background-color: rgb(255, 255, 255);
  border-color: #4a99e9;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  padding: 4px 8px;
  width: max-content;
  white-space: nowrap;
  border-radius: 9999px 9999px 9999px 0;
  color: #363b3f;
}

.custom-cursor__label {
  display: flex;
  align-items: center;
  color: #363b3f;
  font-size: 14px;
  font-weight: 400;
  line-height: normal;
  user-select: none;
  white-space: nowrap;
  // border: 2px solid blue; /* Adjust the border color as needed */
  padding-right: 16px; /* Adjust padding to accommodate the badge */
  position: relative;
}

.custom-cursor__badge {
  position: absolute;
  right: 3px; /* Align the badge to the right within the label */
  width: 12px;
  height: 12px;
  margin-left: 5px;
}

.img-placeholder {
  @apply py-2 px-4 animate-pulse bg-black text-white text-sm font-medium rounded text-center w-fit mx-auto z-[999] relative -translate-y-1;
}
/* ... */

